# cozyapi

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
cozy/: __init__.py  api.py  comfy.py  helpers.py  nodemap.py  schema.py  util.py  workflow.py
cozy/workflows/: flux1-dev-fp8.json  flux1-schnell-fp8.json
