[project]
name = "cozy"
version = "0.1.0"
description = "A simple API wrapper to generate images using ComfyUI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.13.5",
    "fastapi>=0.128.8",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.39.0",
    "websockets>=15.0.1",
]
