[project]
name = "cozy"
version = "0.1.0"
description = "A simple API wrapper to generate images using ComfyUI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.14.1",
    "fastapi>=0.138.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]
